--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   "author": "Maxim Sorokin and Alex Chaliy",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.8",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
+    "material-design-icons": "^3.0.1",
+    "materialize-css": "^0.97.8",
     "mongoose": "^4.6.6"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
