--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Maxim Sorokin and Alex Chaliy",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.5.8",
+    "angular": "1.4.5",
+    "angular-route": "1.4.5",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
