--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
+    "js-cookie": "^2.1.3",
     "lodash": "^4.17.0",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.97.8",
