--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "dependencies": {
     "angular": "1.4.5",
     "angular-route": "1.4.5",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "jquery": "^3.1.1",
-    "js-cookie": "^2.1.3",
-    "lodash": "^4.17.0",
-    "material-design-icons": "^3.0.1",
-    "materialize-css": "^0.97.8",
-    "mongoose": "^4.6.6"
+    "body-parser": "1.15.2",
+    "express": "4.14.0",
+    "jquery": "3.1.1",
+    "js-cookie": "2.1.3",
+    "lodash": "4.17.0",
+    "material-design-icons": "3.0.1",
+    "materialize-css": "0.97.8",
+    "mongoose": "4.6.6"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt": "1.0.1",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-cssmin": "1.0.2",
+    "grunt-contrib-sass": "1.0.0",
+    "grunt-contrib-watch": "1.0.0"
   }
 }
